# Priscilla

./: .gitattributes  settings.gradle.kts
app/: build.gradle.kts  google-services.json
app/src/androidTest/java/com/example/priscilla/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: priscilla-q4_K_Mv3.gguf
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/src/main/java/com/example/priscilla/: AppContainer.kt  ChatViewModel.kt  CloudSyncViewModel.kt  HistoryViewModel.kt  LlamaBridge.kt  LocationProvider.kt  MainActivity.kt  MainApp.kt  MainViewModel.kt  ProfileViewModel.kt  RemindersViewModel.kt  SettingsViewModel.kt  ThemeViewModel.kt  UiState.kt  VoiceOptionsViewModel.kt
app/src/main/java/com/example/priscilla/data/: ActionExecutor.kt  ChatDatabase.kt  ImageAnalyzer.kt  ImageUploader.kt  InformationProvider.kt  Intent.kt  ModelDownloader.kt  Models.kt  NetworkMonitor.kt  PermissionManager.kt  ReminderReceiver.kt  ReminderRepository.kt  SettingsRepository.kt  SyncStateRepository.kt  TtsManager.kt
app/src/main/java/com/example/priscilla/data/auth/: AuthData.kt  ProfileData.kt  VisualPreferences.kt
app/src/main/java/com/example/priscilla/data/repository/: AuthRepositoryImpl.kt  ChatRepositoryImpl.kt  ProfileRepositoryImpl.kt
app/src/main/java/com/example/priscilla/data/source/: ChatFirestoreDataSource.kt  KnowledgeDataSourceImpl.kt  LlamaDataSourceImpl.kt  LocalDataSourceImpl.kt  RemindersCloudDataSource.kt  SettingsCloudDataSource.kt
app/src/main/java/com/example/priscilla/ui/camera/: CameraScreen.kt
app/src/main/java/com/example/priscilla/ui/chat/: ChatScreen.kt
app/src/main/java/com/example/priscilla/ui/history/: HistoryScreen.kt
app/src/main/res/drawable/: splash_icon_fullscreen.xml  transparent_icon.xml
app/src/main/res/values/: colors.xml  ic_launcher_background.xml  themes.xml
app/src/main/res/values-v31/: themes.xml
app/src/test/java/com/example/priscilla/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+12 files in other folders)
